Bug 707822: Take missing coordinates into account when creating link dest.

Previously if either coordinate was NaN, then after transformation
both coordinates would be NaN. But it is desired for given coordinates
to be transformed while missing coordinates are kept at NaN.

From an original patch by Sebastian.